# SSAVM-Benchmark

./: README.md  best_improvement.py  circle_quality.py  common.py  finfet_quality.py  plot.py
aircraft/: .gitignore  bench_all  readme
aircraft/data/: aircraft_boundary.vtu  aircraft_boundary_rotated.vtu  half_aircraft_boundary.vtu  half_aircraft_boundary_rotated.vtu  half_aircraft_geometry.vtu  half_aircraft_rotated_geometry.vtu  make_boundary.xml  rotate_center_aircraft.xml
bridge/: .gitignore  bench_all
circle/: .gitignore  bench_all  bench_quality
finfet_3d/: .gitignore  bench_all  bench_all_angles  bench_all_rer  readme
finfet_3d/data/: make_geometry.xml  mesh.xml  quarter_trigate.poly  trigate.poly
gummel_star/: compare.py  make_tables.py  solve.py
gummel_star/data/: gs_c0.000128_nonsym.vtu  gs_c0.000128_nonsym.xml  gs_c0.000128_nonsym_bnd.xml  gs_c0.000128_reflrotsym.vtu  gs_c0.000128_reflrotsym.xml  gs_c0.000128_reflrotsym_bnd.xml  gs_c0.000128_rotsym.vtu  gs_c0.000128_rotsym.xml  gs_c0.000128_rotsym_bnd.xml  gs_c0.001024_nonsym.vtu  gs_c0.001024_nonsym.xml  gs_c0.001024_nonsym_bnd.xml  gs_c0.001024_reflrotsym.vtu  gs_c0.001024_reflrotsym.xml  gs_c0.001024_reflrotsym_bnd.xml  gs_c0.001024_rotsym.vtu  gs_c0.001024_rotsym.xml  gs_c0.001024_rotsym_bnd.xml  gs_c0.016384_nonsym.vtu  gs_c0.016384_nonsym.xml  gs_c0.016384_nonsym_bnd.xml  gs_c0.016384_reflrotsym.vtu  gs_c0.016384_reflrotsym.xml  gs_c0.016384_reflrotsym_bnd.xml  gs_c0.016384_rotsym.vtu  gs_c0.016384_rotsym.xml  gs_c0.016384_rotsym_bnd.xml  gs_c1.6e-05_nonsym_bnd.xml  gs_c1.6e-05_reflrotsym_bnd.xml  gs_c1.6e-05_rotsym_bnd.xml
mosfet_2d/: .gitignore  bench_all  readme
mosfet_2d/data/: half_lateral_mosfet.pvd  half_lateral_mosfet_0.vtu  half_lateral_mosfet_1.vtu  half_lateral_mosfet_3.vtu  half_lateral_mosfet_5.vtu  half_lateral_mosfet_6.vtu  half_lateral_mosfet_7.vtu  half_meshed.vtu  lateral_mosfet.vtu  make_geometry.xml  make_half_geometry.xml  mesh.xml  (+1 more)
multi_tsv/: .gitignore  bench_all
tools/: .gitignore  3d_geometry.cpp  3d_geometry.hpp  CMakeLists.txt  bench_bridge.cpp  bench_multi_tsv.cpp  bench_reflection.cpp  bench_rotational_2d_circle.cpp  bench_tsv.cpp  benchmark.cpp  benchmark.hpp  common.cpp  common.hpp  compare_solutions.cpp  gummel_star.cpp  make_circle_meshes.cpp  matrix.cpp  matrix.hpp  multimesh_element_copy_map.hpp  quantity_difference.cpp  surf_to_vtu.cpp  svg_to_vtu.cpp  templated_geometry.hpp  templated_mesh.cpp  templated_mesh.hpp  test.cpp  test2.cpp  triangle.cpp  triangle.h  vtk_reader.hpp
tools/statistics/: element_metrics.hpp  statistic.hpp
tools/statistics/metrics/: min_angle.hpp
tsv/: .gitignore  bench_all  bench_quality
